# connect-reports-core

./: README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  deploy.yml
connect/reports/: __init__.py  constants.py  datamodels.py  parser.py  validator.py
connect/reports/renderers/: __init__.py  base.py  csv.py  j2.py  json.py  pdf.py  registry.py  utils.py  xlsx.py
connect/reports/schemas/: reports_schema.json
tests/: __init__.py  conftest.py
tests/reports/: test_constants.py  test_datamodels.py  test_parser.py  test_schema.py  test_validator.py
tests/reports/renderers/: test_base.py  test_csv.py  test_j2.py  test_json.py  test_pdf.py  test_registry.py  test_xlsx.py
